[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-profiler-env"
version = "0.1.0"
description = "OpenEnv environment for code profiling and performance optimization"
readme = "../../README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Code Profiling Team" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
openenv-server = "code_profiler_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["code_profiler_env", "code_profiler_env.server"]
package-dir = { "code_profiler_env" = ".", "code_profiler_env.server" = "server" }

[project.urls]
Homepage = "https://github.com/munipu/code-profiler-env"
Documentation = "https://meta-pytorch.org/OpenEnv/"
Repository = "https://github.com/munipu/code-profiler-env"
